--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -1,8 +1,9 @@
   <aside class="bg-dark">
       <div class="container text-center">
           <div class="call-to-action">
-              <h2>Free Download at Start Bootstrap!</h2>
-              <a href="#" class="btn btn-default btn-xl wow tada">Download Now!</a>
+              <h2>asi es como cantan los pajaros</h2>
+              <a href="#" class="btn btn-default btn-xl wow tada">cancion 1</a>
+              <a href="#" class="btn btn-default btn-xl wow tada">cancion 2</a>
           </div>
       </div>
   </aside>
