--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
             <h1>puedo cambiar todo lo que yo quiera ahora</h1>
             <hr>
             <p>me gustaria saber como cambiar la imagen de fondo para ponerle los rayos</p>
-            <a href="#dios" class="btn btn-primary btn-xl page-scroll">vamos a averiguarlo ahora</a>
+            <a href="#about" class="btn btn-primary btn-xl page-scroll">vamos a averiguarlo ahora</a>
         </div>
     </div>
 </header>
