--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -155,7 +155,7 @@ header {
     min-height: auto;
     @include background-cover;
     background-position: center;
-    background-image: url('../img/rayos.mp4');
+    background-image: url('../img/rayos.gif');
     text-align: center;
     color: white;
     .header-content {
