--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>puedo cambiar todo lo que yo quiera ahora</h1>
+            <h1>we are a financial ecosystem made of pure energy</h1>
             <hr>
             <p>me gustaria saber como cambiar la imagen de fondo para ponerle los rayos</p>
             <a href="#about" class="btn btn-primary btn-xl page-scroll">vamos a averiguarlo ahora</a>
