--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
         <div class="header-content-inner">
             <h1>we're a financial ecosystem made of pure energy</h1>
             <hr>
-            <p>me gustaria saber como cambiar la imagen de fondo para ponerle los rayos</p>
+            <p>We're uniting the FIAT WORLD with the CRYPTO WORLD with - Hybrid financial DApps - NFT 2.0 - a financial METAVERSE - software and hardware ORACLES - a NEW MULTI-CHAIN BLOCKCHAIN - so everyone can automate their finances and make money easily.</p>
             <a href="#about" class="btn btn-primary btn-xl page-scroll">whitepaper</a>
             <a href="#about" class="btn btn-primary btn-xl page-scroll">funding proposal</a>
         </div>
