--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>we're a decentralized financial ecosystem made of pure energy</h1>
+            <h1>we're a new decentralized financial ecosystem made of pure energy</h1>
             <hr>
             <p>We're uniting the FIAT WORLD with the CRYPTO WORLD with - Hybrid financial DApps - NFT 2.0 - a financial METAVERSE - software and hardware ORACLES - a NEW MULTI-CHAIN BLOCKCHAIN - so everyone can automate their finances and make money easily.</p>
             <a href="#about" class="btn btn-primary btn-xl page-scroll">funding proposal</a>
