--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -2,10 +2,18 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">todo lo que tu necesitas</h2>
+                <h2 class="section-heading">We're decentralizing the FIAT world, we're changing the world that surrounds us all.</h2>
                 <hr class="light">
-                <p class="text-faded">adivina que, ya puedo editar la pagina web</p>
-                <a href="#" class="btn btn-default btn-xl">vamos a comenzar</a>
+                <p class="text-faded">We're working to decentralize the world that exists beyond the crypto world, because we want to stop depending on centralized financial institutions. </br>
+
+                    We're creating new decentralized ways to earn money, so that everyone stops depending on centralized jobs, which are dependent and suffocating. We're creating new ways of living from decentralization.</br>
+                    
+                    We're developing systems so that cryptocurrencies, oracles, metaverses, tokens, NFTs, DApps are accepted by all, achieving the complete integration of cryptographic technology in the FIAT world, in an easy, fast and simple way.</br>
+                    
+                    We're the bridge that unites the FIAT world with the CRYPTO world, giving everyone the tools they need to manage their own money in a smarter way, creating new decentralized ways of earning money.</br>
+                    
+                    If you want to decentralize the world around you and massify cryptographic technology, you are one of us... join the new way of doing decentralized business.</p>
+                <a href="#" class="btn btn-default btn-xl">take the first step here</a>
             </div>
         </div>
     </div>
