--- a/_includes/services.html
+++ b/_includes/services.html
@@ -36,6 +36,12 @@
                     <h3>Made with Love</h3>
                     <p class="text-muted">You have to make your websites with love these days!</p>
                 </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="service-box">
+                        <img src="img/portfolio/DAPPS.png" class="img-responsive" alt="">
+                        <h3>Made with Love</h3>
+                        <p class="text-muted">You have to make your websites with love these days!</p>
+                    </div>
             </div>
         </div>
     </div>
