--- a/_includes/services.html
+++ b/_includes/services.html
@@ -18,27 +18,27 @@
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <img src="img/portfolio/DAPPS.png" class="img-responsive" alt="">
+                    <img src="img/portfolio/metaverso.png" class="img-responsive" alt="">
                     <h3>Ready to Ship</h3>
                     <p class="text-muted">You can use this theme as is, or you can make changes!</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <img src="img/portfolio/DAPPS.png" class="img-responsive" alt="">
+                    <img src="img/portfolio/multiblockchain.png" class="img-responsive" alt="">
                     <h3>Up to Date</h3>
                     <p class="text-muted">We update dependencies to keep things fresh.</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 text-center">
                 <div class="service-box">
-                    <img src="img/portfolio/DAPPS.png" class="img-responsive" alt="">
+                    <img src="img/portfolio/nft.png" class="img-responsive" alt="">
                     <h3>Made with Love</h3>
                     <p class="text-muted">You have to make your websites with love these days!</p>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <img src="img/portfolio/DAPPS.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/oracle.png" class="img-responsive" alt="">
                         <h3>Made with Love</h3>
                         <p class="text-muted">You have to make your websites with love these days!</p>
                     </div>
