--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -218,7 +218,7 @@ header {
         margin: 20px auto 0;
 display:flex;
 align-items:center;
-flex-direction: column;
+flex-direction: row;
 background:red;
     }
     p {
