--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -214,6 +214,7 @@ header {
 .service-box {
     max-width: 400px;
     margin: 50px auto 0;
+    align-items: center;
     @media (min-width: 992px) {
         margin: 20px auto 0;
     }
