--- a/_includes/services.html
+++ b/_includes/services.html
@@ -1,42 +1,37 @@
-<section id="services">
-    <div class="container">
-        <div class="row">
+<section id="services2">
+    <div class="container2">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">At Your Service</h2>
+                <h2 class="section-heading">Nuestro ecosistema financiero</h2>
                 <hr class="primary">
             </div>
-        </div>
     </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-3 col-md-6 text-center">
-                <div class="service-box">
+
+    <div class="container2">
+                <div class="service-box2">
                     <img src="img/portfolio/DAPPS.png" class="img-responsive" alt="">
-                    <h3>Sturdy Templates</h3>
-                    <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+                    <h3>Dapps Financieras</h3>
+                    <p class="text-muted">Descubre nuevas formas de ganar dinero descentralizadamente</p>
                 </div>
-            </div>
-            <div class="col-lg-3 col-md-6 text-center">
-                <div class="service-box">
-                    <img src="img/portfolio/METAVERSO.png" class="img-responsive" alt="">
-                    <h3>Ready to Ship</h3>
-                    <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+                <div class="service-box2">
+                    <img src="img/portfolio/MULTIBLOCKCHAIN.png" class="img-responsive" alt="">
+                    <h3>Multiblockchain de negocios</h3>
+                    <p class="text-muted">Nos comunicamos con las otras blockchain para hacer negocios</p>
                 </div>
-            </div>
-            <div class="col-lg-3 col-md-6 text-center">
-                <div class="service-box">
-                    <img src="img/portfolio/ORACLE.png" class="img-responsive" alt="">
-                    <h3>Up to Date</h3>
-                    <p class="text-muted">We update dependencies to keep things fresh.</p>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 text-center">
-                <div class="service-box">
+                <div class="service-box2">
                     <img src="img/portfolio/NFT.png" class="img-responsive" alt="">
-                    <h3>Made with Love</h3>
-                    <p class="text-muted">You have to make your websites with love these days!</p>
+                    <h3>NFTs 2.0</h3>
+                    <p class="text-muted">La nueva generacion de los NFT llegaron a nuestra blockchain</p>
                 </div>
-            </div>
-        </div>
+                <div class="service-box2">
+                    <img src="img/portfolio/ORACLE.png" class="img-responsive" alt="">
+                    <h3>Oraculos</h3>
+                    <p class="text-muted">Oraculos de software y hardware de ultima generacion</p>
+                </div>
+                <div class="service-box2">
+                    <img src="img/portfolio/METAVERSO.png" class="img-responsive" alt="">
+                    <h3>Metaverso</h3>
+                    <p class="text-muted">Un metaverso financiero diseñado para ganar dinero</p>
+                </div>
     </div>
+
 </section>
