--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -353,6 +353,9 @@ body {
 	flex-wrap: wrap;
 	justify-content: center;
 	align-items: center;
+    background: red;
+    padding:0;
+    margin:0;
 }
 
 .container2 {
