--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -353,8 +353,8 @@ body {
 	flex-wrap: wrap;
 	justify-content: center;
 	align-items: center;
-    background: red;
-    padding:0;
+    background: #007EC0;
+    padding:10px 0 10px 0;
     margin:0;
 }
 
