--- a/_includes/call-to-action.html
+++ b/_includes/call-to-action.html
@@ -13,7 +13,7 @@
                     We're the bridge that unites the FIAT world with the CRYPTO world, giving everyone the tools they need to manage their own money in a smarter way, creating new decentralized ways of earning money.</br></br>
                     
                     If you want to decentralize the world around you and massify cryptographic technology, you are one of us... join the new way of doing decentralized business.</p>
-                <a href="#" class="btn btn-default btn-xl">take the first step here</a>
+                <a href="#" class="btn btn-default btn-xl">take the first step here - Whitelist</a>
             </div>
         </div>
     </div>
