--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -353,8 +353,9 @@ body {
 	flex-wrap: wrap;
 	justify-content: center;
 	align-items: center;
-    background: #007EC0;
-    padding:10px 0 10px 0;
+    background: #40a9e2;
+    padding-top: 10px;
+    padding-bottom: 10px;
     margin:0;
 }
 
