--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -353,7 +353,7 @@ body {
 	flex-wrap: wrap;
 	justify-content: center;
 	align-items: center;
-    background: #40a9e2;
+    background: rgb(12, 63, 108);
     padding-top: 10px;
     padding-bottom: 10px;
     margin:0;
