--- a/_includes/services.html
+++ b/_includes/services.html
@@ -10,27 +10,27 @@
                 <div class="service-box2">
                     <img src="img/portfolio/DAPPS.png" class="img-responsive" alt="">
                     <h3>Dapps Financieras</h3>
-                    <p class="text-muted">Descubre nuevas formas de ganar dinero descentralizadamente</p>
+                    <p>Descubre nuevas formas de ganar dinero descentralizadamente</p>
                 </div>
                 <div class="service-box2">
                     <img src="img/portfolio/MULTIBLOCKCHAIN.png" class="img-responsive" alt="">
                     <h3>Multiblockchain de negocios</h3>
-                    <p class="text-muted">Nos comunicamos con las otras blockchain para hacer negocios</p>
+                    <p>Nos comunicamos con las otras blockchain para hacer negocios</p>
                 </div>
                 <div class="service-box2">
                     <img src="img/portfolio/NFT.png" class="img-responsive" alt="">
                     <h3>NFTs 2.0</h3>
-                    <p class="text-muted">La nueva generacion de los NFT llegaron a nuestra blockchain</p>
+                    <p>La nueva generacion de los NFT llegaron a nuestra blockchain</p>
                 </div>
                 <div class="service-box2">
                     <img src="img/portfolio/ORACLE.png" class="img-responsive" alt="">
                     <h3>Oraculos</h3>
-                    <p class="text-muted">Oraculos de software y hardware de ultima generacion</p>
+                    <p>Oraculos de software y hardware de ultima generacion</p>
                 </div>
                 <div class="service-box2">
                     <img src="img/portfolio/METAVERSO.png" class="img-responsive" alt="">
                     <h3>Metaverso</h3>
-                    <p class="text-muted">Un metaverso financiero diseñado para ganar dinero</p>
+                    <p>Un metaverso financiero diseñado para ganar dinero</p>
                 </div>
     </div>
 
