--- a/_includes/services.html
+++ b/_includes/services.html
@@ -1,7 +1,7 @@
 <section id="services2">
     <div class="container2">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Nuestro ecosistema financiero</h2>
+                <h2 class="section-heading">Our decentralized financial ecosystem</h2>
                 <hr class="primary">
             </div>
     </div>
@@ -9,28 +9,28 @@
     <div class="container2">
                 <div class="service-box2">
                     <img src="img/portfolio/DAPPS.png" class="img-responsive" alt="">
-                    <h3>Dapps Financieras</h3>
-                    <p>Descubre nuevas formas de ganar dinero descentralizadamente</p>
+                    <h3>Financial Dapps</h3>
+                    <p>Discover new ways to earn money decentralized</p>
                 </div>
                 <div class="service-box2">
                     <img src="img/portfolio/MULTIBLOCKCHAIN.png" class="img-responsive" alt="">
-                    <h3>Multiblockchain de negocios</h3>
-                    <p>Nos comunicamos con las otras blockchain para hacer negocios</p>
+                    <h3>Multi-blockchain business</h3>
+                    <p>We communicate with the other blockchains to do business</p>
                 </div>
                 <div class="service-box2">
                     <img src="img/portfolio/NFT.png" class="img-responsive" alt="">
                     <h3>NFTs 2.0</h3>
-                    <p>La nueva generacion de los NFT llegaron a nuestra blockchain</p>
+                    <p>The new generation of NFTs arrived on our blockchain</p>
                 </div>
                 <div class="service-box2">
                     <img src="img/portfolio/ORACLE.png" class="img-responsive" alt="">
-                    <h3>Oraculos</h3>
-                    <p>Oraculos de software y hardware de ultima generacion</p>
+                    <h3>Oracles</h3>
+                    <p>State-of-the-art hardware and software Oracles</p>
                 </div>
                 <div class="service-box2">
                     <img src="img/portfolio/METAVERSO.png" class="img-responsive" alt="">
-                    <h3>Metaverso</h3>
-                    <p>Un metaverso financiero diseñado para ganar dinero</p>
+                    <h3>Metaverse</h3>
+                    <p>A financial metaverse designed to make money</p>
                 </div>
     </div>
 
