--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -410,7 +410,7 @@ body {
 	flex-wrap: wrap;
 	flex-direction: column;
 	width: 70%;
-	height: 100%;
+	height: 20em;
 	justify-content: center;
 	align-items: center;
 }
