--- a/_includes/airdrop.html
+++ b/_includes/airdrop.html
@@ -7,16 +7,19 @@
     </div>
   
     <div class="airdropbottoms">
-      
+        <div>   
   <a href="#" class="btn btn-default btn-xl wow tada">how to participate in the airdrop</a>
   <a href="#" class="btn btn-default btn-xl wow tada">Check the accumulated Electhrons</a>
   <a href="#" class="btn btn-default btn-xl wow tada">Registration bot of your codes</a>
+  <a href="#" class="btn btn-default btn-xl wow tada">review the airdrops.io</a>
   <a href="#" class="btn btn-default btn-xl wow tada">Smart contract of your free NFT</a>
+        </div>
+        <div>
   <a href="#" class="btn btn-default btn-xl wow tada">mint your NFT for free</a>
   <a href="#" class="btn btn-default btn-xl wow tada">Check the free NFTs on OPENSEA</a>
   <a href="#" class="btn btn-default btn-xl wow tada">smart contract of more nft for the airdrop</a>
   <a href="#" class="btn btn-default btn-xl wow tada">mint more nft for the airdrop</a>
   <a href="#" class="btn btn-default btn-xl wow tada">collection in opensea of more nft for the airdrop</a>
-  
+        </div>
     </div>
   </section>
