--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -410,10 +410,8 @@ body {
 	flex-wrap: wrap;
 	flex-direction: column;
 	width: 70%;
-	height: 20em;
+	height: 30em;
 	justify-content: center;
 	align-items: center;
-}
-
-.airdropbottoms a {
+    background:red;
 }
