--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -395,7 +395,7 @@ body {
 	flex-wrap: wrap;
 	flex-direction: column;
 	width: 30%;
-	height: 100%;
+	height: 30em;
 	justify-content: center;
 	align-items: center;
 }
