--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -398,6 +398,7 @@ body {
 	height: 30em;
 	justify-content: center;
 	align-items: center;
+    background:red;
 }
 
 .airdroptxt p {
@@ -413,5 +414,5 @@ body {
 	height: 30em;
 	justify-content: center;
 	align-items: center;
-    font-size: 0.5em;
+    background:blue;
 }
