--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -11,6 +11,7 @@
   {% include portfolio.html %}
   {% include community.html %}
   {% include airdrop.html %}
+  {% include partners.html %}
   {% include aside.html %}
   {% include contact.html %}
   {% include scripts.html %}
