--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -430,6 +430,6 @@ body {
 .partnerchips {
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: center;
+	justify-content: space-around;
 	align-items: center;
 }
