telegram bot boton

--- a/_includes/airdrop.html
+++ b/_includes/airdrop.html
@@ -9,7 +9,7 @@
     <div class="airdropbottoms">
   <a href="#" class="btn btn-default btn-xl wow tada">how to participate</a>
   <a href="#" class="btn btn-default btn-xl wow tada">Check Electhrons</a>
-  <a href="#" class="btn btn-default btn-xl wow tada">Registration your NFT code</a>
+  <a href="#" class="btn btn-default btn-xl wow tada">telegram bot</a>
   <a href="#" class="btn btn-default btn-xl wow tada">review the airdrops.io</a>
   <a href="#" class="btn btn-default btn-xl wow tada">Smart contract of free NFT</a>
   <a href="#" class="btn btn-default btn-xl wow tada">mint NFT for free</a>
