--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
             <h1>we're a new decentralized financial ecosystem made of pure energy</h1>
             <hr>
             <p>We're uniting the FIAT WORLD with the CRYPTO WORLD with - Hybrid financial DApps - NFT 2.0 - a financial METAVERSE - software and hardware ORACLES - a NEW MULTI-CHAIN BLOCKCHAIN - so everyone can automate their finances and make money easily.</p>
-            <a href="#about" class="btn btn-primary btn-xl page-scroll">funding proposal</a>
+            <a href="./upload/WHITE PAPER ELECTHRONS INGLES V2.pdf" class="btn btn-primary btn-xl page-scroll">funding proposal</a>
             <a href="#about" class="btn btn-primary btn-xl page-scroll">whitepaper</a>
         </div>
     </div>
