--- a/_includes/airdrop.html
+++ b/_includes/airdrop.html
@@ -7,6 +7,7 @@
     </div>
   
     <div class="airdropbottoms">
+      <div>
   <a href="#" class="btn btn-default btn-xl wow tada">how to participate</a>
   <a href="#" class="btn btn-default btn-xl wow tada">Check Electhrons</a>
   <a href="#" class="btn btn-default btn-xl wow tada">telegram bot</a>
@@ -17,5 +18,6 @@
   <a href="#" class="btn btn-default btn-xl wow tada">smart contract of more nft</a>
   <a href="#" class="btn btn-default btn-xl wow tada">mint more nft</a>
   <a href="#" class="btn btn-default btn-xl wow tada">opensea more nft</a>
+      </div>
     </div>
   </section>
