--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -416,6 +416,7 @@ body {
 .airdropbottoms div {
 	display: flex;
 	flex-wrap: wrap;
+	width: 100%;
 	justify-content: space-around;
 	align-items: center;
 }
