--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -3,14 +3,14 @@
         <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/DXTREMING.png" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                DXTREMING
                             </div>
                             <div class="project-name">
-                                Project Name
+                                DECENTRALIZED STREAMING SERVICE
                             </div>
                         </div>
                     </div>
@@ -18,14 +18,14 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/LEERNEN.png" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                LEERNEN
                             </div>
                             <div class="project-name">
-                                Project Name
+                                DECENTRALIZED AND FAIR EDUCATIONAL PLATFORM
                             </div>
                         </div>
                     </div>
@@ -33,14 +33,14 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/3.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/FLOTHA.png" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                FLOTHA
                             </div>
                             <div class="project-name">
-                                Project Name
+                                DECENTRALIZED TRANSPORTATION SERVICE
                             </div>
                         </div>
                     </div>
@@ -48,14 +48,14 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/INBIERTO.png" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                INBIERTO
                             </div>
                             <div class="project-name">
-                                Project Name
+                                DECENTRALIZED INVESTMENT PLATFORM
                             </div>
                         </div>
                     </div>
@@ -63,14 +63,14 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/5.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/ZUPPLYSHOP.png" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                ZUPPLYSHOP
                             </div>
                             <div class="project-name">
-                                Project Name
+                                DECENTRALIZED E-COMMERCE
                             </div>
                         </div>
                     </div>
@@ -78,14 +78,14 @@
             </div>
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
-                    <img src="img/portfolio/6.jpg" class="img-responsive" alt="">
+                    <img src="img/portfolio/ELECTHRON-CARD" class="img-responsive" alt="">
                     <div class="portfolio-box-caption">
                         <div class="portfolio-box-caption-content">
                             <div class="project-category text-faded">
-                                Category
+                                ELECTHRON CARD
                             </div>
                             <div class="project-name">
-                                Project Name
+                                DECENTRALIZED CREDIT CARD
                             </div>
                         </div>
                     </div>
