--- a/_includes/airdrop.html
+++ b/_includes/airdrop.html
@@ -7,15 +7,30 @@
     </div>
   
     <div class="airdropbottoms">
+      <div>
+        <div>Titulo</div>
+          <div>
   <a href="#" class="btn btn-default btn-xl wow tada">how to participate</a>
   <a href="#" class="btn btn-default btn-xl wow tada">Check Electhrons</a>
   <a href="#" class="btn btn-default btn-xl wow tada">telegram bot</a>
   <a href="#" class="btn btn-default btn-xl wow tada">review the airdrops.io</a>
+          </div>
+      </div>
+      <div>
+        <div>Titulo</div>
+          <div>
   <a href="#" class="btn btn-default btn-xl wow tada">Smart contract of free NFT</a>
   <a href="#" class="btn btn-default btn-xl wow tada">mint NFT for free</a>
   <a href="#" class="btn btn-default btn-xl wow tada">Check free NFTs on OPENSEA</a>
+          </div>
+      </div>
+      <div>
+        <div>Titulo</div>
+          <div>
   <a href="#" class="btn btn-default btn-xl wow tada">smart contract of more nft</a>
   <a href="#" class="btn btn-default btn-xl wow tada">mint more nft</a>
   <a href="#" class="btn btn-default btn-xl wow tada">opensea more nft</a>
+          </div>
+      </div>
     </div>
   </section>
