--- a/_includes/airdrop.html
+++ b/_includes/airdrop.html
@@ -8,7 +8,7 @@
   
     <div class="airdropbottoms">
       <div>
-        <div>Titulo</div>
+        <div>HOW TO PARTICIPATE</div>
           <div>
   <a href="#" class="btn btn-default btn-xl wow tada">how to participate</a>
   <a href="#" class="btn btn-default btn-xl wow tada">Check Electhrons</a>
@@ -17,7 +17,7 @@
           </div>
       </div>
       <div>
-        <div>Titulo</div>
+        <div>HOW TO GET YOUR FREE NFT</div>
           <div>
   <a href="#" class="btn btn-default btn-xl wow tada">Smart contract of free NFT</a>
   <a href="#" class="btn btn-default btn-xl wow tada">mint NFT for free</a>
@@ -25,7 +25,7 @@
           </div>
       </div>
       <div>
-        <div>Titulo</div>
+        <div>HOW TO GET MORE NFTs</div>
           <div>
   <a href="#" class="btn btn-default btn-xl wow tada">smart contract of more nft</a>
   <a href="#" class="btn btn-default btn-xl wow tada">mint more nft</a>
