--- a/_includes/airdrop.html
+++ b/_includes/airdrop.html
@@ -12,24 +12,24 @@
           <div>
   <a href="#" class="btn btn-default btn-xl wow tada">how to participate</a>
   <a href="#" class="btn btn-default btn-xl wow tada">Check Electhrons</a>
-  <a href="#" class="btn btn-default btn-xl wow tada">telegram bot</a>
-  <a href="#" class="btn btn-default btn-xl wow tada">review the airdrops.io</a>
+  <a href="#" class="btn btn-default btn-xl wow tada">Telegram Bot</a>
+  <a href="#" class="btn btn-default btn-xl wow tada">Review airdrops.io</a>
           </div>
       </div>
       <div>
         <div>HOW TO GET YOUR FREE NFT</div>
           <div>
-  <a href="#" class="btn btn-default btn-xl wow tada">Smart contract of free NFT</a>
-  <a href="#" class="btn btn-default btn-xl wow tada">mint NFT for free</a>
-  <a href="#" class="btn btn-default btn-xl wow tada">Check free NFTs on OPENSEA</a>
+  <a href="#" class="btn btn-default btn-xl wow tada">Smart contract</a>
+  <a href="#" class="btn btn-default btn-xl wow tada">Mint NFT for free</a>
+  <a href="#" class="btn btn-default btn-xl wow tada">Check on OPENSEA</a>
           </div>
       </div>
       <div>
         <div>HOW TO GET MORE NFTs</div>
           <div>
-  <a href="#" class="btn btn-default btn-xl wow tada">smart contract of more nft</a>
-  <a href="#" class="btn btn-default btn-xl wow tada">mint more nft</a>
-  <a href="#" class="btn btn-default btn-xl wow tada">opensea more nft</a>
+  <a href="#" class="btn btn-default btn-xl wow tada">Smart contract</a>
+  <a href="#" class="btn btn-default btn-xl wow tada">Mint more NFT</a>
+  <a href="#" class="btn btn-default btn-xl wow tada">Check on OPENSEA</a>
           </div>
       </div>
     </div>
