--- a/_includes/airdrop.html
+++ b/_includes/airdrop.html
@@ -10,7 +10,7 @@
       <div>
         <div>HOW TO PARTICIPATE</div>
           <div>
-  <a href="#" class="btn btn-default btn-xl wow tada">how to participate</a>
+  <a href="#" class="btn btn-default btn-xl wow tada">How to participate</a>
   <a href="#" class="btn btn-default btn-xl wow tada">Check Electhrons</a>
   <a href="#" class="btn btn-default btn-xl wow tada">Telegram Bot</a>
   <a href="#" class="btn btn-default btn-xl wow tada">Review airdrops.io</a>
