--- a/_includes/airdrop.html
+++ b/_includes/airdrop.html
@@ -7,7 +7,7 @@
     </div>
   
     <div class="airdropbottoms">
-      <div>
+      <div class="howtoparticipate">
         <div>HOW TO PARTICIPATE</div>
           <div>
   <a href="#" class="btn btn-default btn-xl wow tada">How to participate</a>
@@ -16,7 +16,7 @@
   <a href="#" class="btn btn-default btn-xl wow tada">Review airdrops.io</a>
           </div>
       </div>
-      <div>
+      <div class="howtoparticipate">
         <div>HOW TO GET YOUR FREE NFT</div>
           <div>
   <a href="#" class="btn btn-default btn-xl wow tada">Smart contract</a>
@@ -24,7 +24,7 @@
   <a href="#" class="btn btn-default btn-xl wow tada">Check on OPENSEA</a>
           </div>
       </div>
-      <div>
+      <div class="howtoparticipate">
         <div>HOW TO GET MORE NFTs</div>
           <div>
   <a href="#" class="btn btn-default btn-xl wow tada">Smart contract</a>
