--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -440,3 +440,9 @@ body {
 	align-items: center;
 }
 
+.howtoparticipate {
+    display:flex;
+    flex:wrap;
+    justify-content: center;
+    align-items: center;
+}
