--- a/_includes/airdrop.html
+++ b/_includes/airdrop.html
@@ -8,7 +8,7 @@
   
     <div class="airdropbottoms">
       <div class="howtoparticipate">
-        <div>HOW TO PARTICIPATE</div>
+        <div class="titlehowto">HOW TO PARTICIPATE</div>
           <div>
   <a href="#" class="btn btn-default btn-xl wow tada">How to participate</a>
   <a href="#" class="btn btn-default btn-xl wow tada">Check Electhrons</a>
@@ -17,7 +17,7 @@
           </div>
       </div>
       <div class="howtoparticipate">
-        <div>HOW TO GET YOUR FREE NFT</div>
+        <div class="titlehowto">HOW TO GET YOUR FREE NFT</div>
           <div>
   <a href="#" class="btn btn-default btn-xl wow tada">Smart contract</a>
   <a href="#" class="btn btn-default btn-xl wow tada">Mint NFT for free</a>
@@ -25,7 +25,7 @@
           </div>
       </div>
       <div class="howtoparticipate">
-        <div>HOW TO GET MORE NFTs</div>
+        <div class="titlehowto">HOW TO GET MORE NFTs</div>
           <div>
   <a href="#" class="btn btn-default btn-xl wow tada">Smart contract</a>
   <a href="#" class="btn btn-default btn-xl wow tada">Mint more NFT</a>
