--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -447,3 +447,8 @@ body {
     justify-content: center;
     align-items: center;
 }
+
+.titlehowto {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-weight: bold;
+}
