airdrop title franklin

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -449,7 +449,7 @@ body {
 }
 
 .titlehowto {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight: bold;
     font-size:2px;
 }
