--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -449,7 +449,5 @@ body {
 }
 
 .titlehowto {
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-weight: bold;
-    font-size:2px;
+    font-family:'Times New Roman', Times, serif
 }
