--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -449,5 +449,7 @@ body {
 }
 
 .titlehowto {
-    font-family:'Times New Roman', Times, serif
+    font-size: 2em;
+    font-weight: bold;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
 }
