--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -451,5 +451,6 @@ body {
 .titlehowto {
     font-size: 0.5em;
     font-weight: bold;
+    text-decoration: underline;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
 }
