--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -449,7 +449,8 @@ body {
 }
 
 .titlehowto {
-    font-size: 0.5em;
+    font-size: 1em;
+    text-decoration: underline;
     font-weight: bold;
     text-decoration: underline;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
