--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -449,8 +449,7 @@ body {
 }
 
 .titlehowto {
-    text-decoration: underline;
     font-size: 1em;
     font-weight: bold;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
