--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -449,6 +449,9 @@ body {
 }
 
 .titlehowto {
-    font-size: 1em;
+    padding: 3px;
+    font-size: 20px;
+    font-weight: bold;
+    text-decoration: underline;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
