--- a/_includes/airdrop.html
+++ b/_includes/airdrop.html
@@ -1,9 +1,14 @@
 <section id="airdrop">
 
     <div class="airdroptxt">
+        <div class="airdroptxtitle">
       <h2>AIRDROP</h2></br></br>
-      <p>We will be distributing</p> <h2>20,000,000 Electhrons</h2> <p>among all the members of our community. Anyone can participate, anyone can win. You just have to follow the instructions to accumulate more and more Electhrons in your account, earn creature NFTs, utility NFTs or properties in our metaverse.</p>
-  
+      <p>We will be distributing</p> 
+      <h2>20,000,000 Electhrons</h2>
+        </div>
+        <div class="airdroptext">
+      <p>among all the members of our community. Anyone can participate, anyone can win. You just have to follow the instructions to accumulate more and more Electhrons in your account, earn creature NFTs, utility NFTs or properties in our metaverse.</p>
+        </div>
     </div>
   
     <div class="airdropbottoms">
