--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -431,6 +431,7 @@ body {
 }
 
 .titlehowto {
+    font-size: 20px;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
