--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -405,9 +405,10 @@ body {
 .airdroptxtitle {
     display: flex;
     flex:wrap;
-    width: 100%;
+    width: 80%;
     justify-content: center;
     align-items: center;
+    background: red;
 }
 
 .airdroptext {
