--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -15,7 +15,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a class="page-scroll" href="#about">dios</a>
+                    <a class="page-scroll" href="#ecosystem">ecosystem</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#community">community</a>
