--- a/_includes/services.html
+++ b/_includes/services.html
@@ -1,4 +1,4 @@
-<section id="services2">
+<section id="descentralization">
     <div class="container2">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Our decentralized financial ecosystem</h2>
