--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -21,6 +21,9 @@
                     <a class="page-scroll" href="#community">community</a>
                 </li>
                 <li>
+                    <a class="page-scroll" href="#descentralization">descentralization</a>
+                </li>
+                <li>
                     <a class="page-scroll" href="#portfolio">Portfolio</a>
                 </li>
                 <li>
