--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -24,7 +24,7 @@
                     <a class="page-scroll" href="#descentralization">descentralization</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#portfolio">Portfolio</a>
+                    <a class="page-scroll" href="#platforms">platforms</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
