--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -26,6 +26,9 @@
                 <li>
                     <a class="page-scroll" href="#community">community</a>
                 </li>
+                <li>
+                    <a class="page-scroll" href="#airdrop">airdrop</a>
+                </li>
 
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
