--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -31,6 +31,14 @@
                 </li>
 
                 <li>
+                    <a class="page-scroll" href="#bg-dark">team</a>
+                </li>
+
+                <li>
+                    <a class="page-scroll" href="#partners">partners</a>
+                </li>
+
+                <li>
                     <a class="page-scroll" href="#contact">Contact</a>
                 </li>
             </ul>
