--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -466,3 +466,8 @@ body {
 	justify-content: space-around;
 	align-items: center;
 }
+/*TEAM*/
+
+#team {
+    background-image: url('../img/worldteam.gif');
+}
