--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -473,5 +473,6 @@ body {
     flex-wrap: wrap;
     background-repeat: no-repeat;
     width: 100%;
-    background-image: url('../img/worldteam.gif');
+    height:100%;
+    background-image: url('../img/worldteam.mp4');
 }
