--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -474,5 +474,5 @@ body {
     background-repeat: no-repeat;
     width: 100%;
     height:100%;
-    background-image: url('../img/worldteam.mp4');
+    background-image: url('../img/worldteam.gif');
 }
