--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -472,7 +472,6 @@ body {
     display: flex;
     flex-wrap: wrap;
     background-repeat: no-repeat;
-    width: 100%;
-    height:100%;
+    height: 600px;
     background-image: url('../img/worldteam.gif');
 }
