tierra team nuevo

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -471,5 +471,6 @@ body {
 #team {
     background: url('../img/worldteam.gif'), url('../img/tierra-team.png') no-repeat center center fixed;
     background-size: cover;
+    height: 100%;
     overflow: hidden;
 }
