--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -471,6 +471,6 @@ body {
 #team {
     background: url('../img/worldteam.gif'), url('../img/tierra-team.png') no-repeat center center fixed;
     background-size: cover;
-    height: 100%;
+    height: 360px;
     overflow: hidden;
 }
