--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -469,7 +469,7 @@ body {
 /*TEAM*/
 
 #team {
-    background: url('../img/worldteam.gif'), url('../img/tierra-team.png') no-repeat center center fixed;
+    background: url('../img/tierra-team.png'), url('../img/worldteam.gif') no-repeat center center fixed;
     background-size: cover;
     height: 360px;
     overflow: hidden;
