--- a/_includes/team.html
+++ b/_includes/team.html
@@ -1,4 +1,4 @@
 <section id="team">
-<img class="imgteamsection" src="../img/tierra-team.png"
+<img class="imgteamsection" src="../img/tierra-team.png">
 
   </section>
