--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -477,5 +477,9 @@ body {
 
 .imgteamsection {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
+    width:100%;
+    height: 100%;
+    align-items: flex-end;
 }
