--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -479,7 +479,6 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    width:100%;
-    height: 100%;
+background:red;
     align-items: flex-end;
 }
