--- a/_includes/team.html
+++ b/_includes/team.html
@@ -1,4 +1,5 @@
 <section id="team">
-<img class="imgteamsection" src="../img/tierra-team.png">
-
+    <div class="imgteamsection">
+<img src="../img/tierra-team.png">
+    </div>
   </section>
