--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -479,6 +479,8 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-background:red;
     align-items: flex-end;
+    width: 100%;
+    height: 100%;
+    background:red;
 }
