--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -481,6 +481,6 @@ body {
     justify-content: center;
     align-items: flex-end;
     width: 100%;
-    height:max-content;
+    height: 100%;
     background:red;
 }
