--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -482,6 +482,7 @@ body {
     align-items: flex-end;
     width: 100%;
     min-height: 100% !important;
-    height: 100%;
+    height: 1000px;
+    padding:800px;
     background:red;
 }
