--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -481,6 +481,6 @@ body {
     justify-content: center;
     align-items: flex-end;
     width: 100%;
-    padding:800px;
-    background:blue;
+    margin:800px;
+    background:grey;
 }
