--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -481,6 +481,7 @@ body {
     justify-content: center;
     align-items: flex-end;
     width: 100%;
+    height: 100%;
     margin-top:50px;
-    background:orange;
+    background:brown;
 }
