--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -482,6 +482,6 @@ body {
     align-items: flex-end;
     width: 100%;
     height: 100%;
-    margin-top:50px;
-    background:brown;
+    margin-top:100px;
+    background:orangered;
 }
