--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -481,6 +481,6 @@ body {
     justify-content: center;
     align-items: flex-end;
     width: 100%;
-    bottom: 2px;
-    position:absolute;
+    bottom: auto;
+    position:relative;
 }
