--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -481,6 +481,6 @@ body {
     justify-content: center;
     align-items: flex-end;
     width: 100%;
-    top: auto;
-    position:relative;
+    bottom:-10em;
+    position:absolute;
 }
