--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -480,7 +480,6 @@ body {
     flex-wrap: wrap;
     justify-content: center;
     align-items: flex-end;
+    align-content: center;
     width: 100%;
-    bottom:0;
-    position:absolute;
 }
