--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -476,10 +476,5 @@ body {
 }
 
 .imgteamsection {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: flex-end;
-    align-content: center;
-    width: 100%;
+    bottom: -4em;
 }
