--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -476,8 +476,8 @@ body {
 }
 
 .imgteamsection {
-    bottom: -4rem;
-    background:blue;
+    top: -4rem;
+    background:green;
     height: 100%;
     width:100%;
 }
