--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -478,8 +478,8 @@ body {
 .imgteamsection {
     display: flex;
     justify-content: center;
-    align-items: center;
-    background:grey;
+    align-items: flex-end;
+    background:purple;
     height: 100%;
     width:100%;
 }
