--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -479,7 +479,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    background:purple;
+    background:brown;
     height: 100%;
     width:100%;
+    margin-top: 10px;
 }
