top green 1em img

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -479,11 +479,11 @@ body {
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    background:red;
+    background:green;
     height: 100%;
     width:100%;
 }
 
 .imgteamsection img {
-    bottom:-1em;
+    top:-1em;
 }
