padding top img blue

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -479,11 +479,11 @@ body {
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    background:green;
+    background:blue;
     height: 100%;
     width:100%;
 }
 
 .imgteamsection img {
-    top:-1em;
+    padding-top:-1em;
 }
