paddin top grey img 3em

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -479,11 +479,11 @@ body {
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    background:blue;
+    background:grey;
     height: 100%;
     width:100%;
 }
 
 .imgteamsection img {
-    padding-top:-1em;
+    padding-top:3em;
 }
