--- a/_includes/team.html
+++ b/_includes/team.html
@@ -1,5 +1,5 @@
 <section id="team">
     <div class="imgteamsection">
-    <img src="../img/CvWe.gif">
+    <img src="../img/unnamed-file.gif">
     </div>
 </section>
