--- a/_includes/team.html
+++ b/_includes/team.html
@@ -1,5 +1,72 @@
 <section id="team">
     <div class="imgteamsection">
-    <img src="../img/unnamed-file.gif">
+        <div class="conteamers">
+            <div class="teamers">
+                <img src="../img/team/moe.png">
+                <h2>NOMBRE</h2>
+                <h3>CARGO</h3>
+            </div>
+            <div class="teamers">
+                <img src="../img/team/moe.png">
+                <h2>NOMBRE</h2>
+                <h3>CARGO</h3>
+            </div>
+            <div class="teamers">
+                <img src="../img/team/moe.png">
+                <h2>NOMBRE</h2>
+                <h3>CARGO</h3>
+            </div>
+            <div class="teamers">
+                <img src="../img/team/moe.png">
+                <h2>NOMBRE</h2>
+                <h3>CARGO</h3>
+            </div>
+        </div>
+
+        <div class="conteamers">
+            <div class="teamers">
+                <img src="../img/team/moe.png">
+                <h2>NOMBRE</h2>
+                <h3>CARGO</h3>
+            </div>
+            <div class="teamers">
+                <img src="../img/team/moe.png">
+                <h2>NOMBRE</h2>
+                <h3>CARGO</h3>
+            </div>
+            <div class="teamers">
+                <img src="../img/team/moe.png">
+                <h2>NOMBRE</h2>
+                <h3>CARGO</h3>
+            </div>
+            <div class="teamers">
+                <img src="../img/team/moe.png">
+                <h2>NOMBRE</h2>
+                <h3>CARGO</h3>
+            </div>
+        </div>
+
+        <div class="conteamers">
+            <div class="teamers">
+                <img src="../img/team/moe.png">
+                <h2>NOMBRE</h2>
+                <h3>CARGO</h3>
+            </div>
+            <div class="teamers">
+                <img src="../img/team/moe.png">
+                <h2>NOMBRE</h2>
+                <h3>CARGO</h3>
+            </div>
+            <div class="teamers">
+                <img src="../img/team/moe.png">
+                <h2>NOMBRE</h2>
+                <h3>CARGO</h3>
+            </div>
+            <div class="teamers">
+                <img src="../img/team/moe.png">
+                <h2>NOMBRE</h2>
+                <h3>CARGO</h3>
+            </div>
+        </div>
     </div>
 </section>
