--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -475,7 +475,8 @@ body {
     overflow: hidden;
 }
 
-.imgteamsection {
+.imgteamsection,
+.teamers {
     display: flex;
     flex-direction:column;
     flex:wrap;
